lang/interpret_test/TestAstFunc2/panic2.txtar
-- main.mcl --
# This should panic!
panic(true)
test "hello" {}
-- OUTPUT --
# err: errStream: func `panic @ 0x0000000000` stopped before it was loaded
bool panic occurred: /main.mcl @ 2:1-2:12

panic(true)
^^^^^^^^^^^
